--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,13 @@ body {
   background-color: #f5f7fa;
   font-family: Montserrat;
 }
-
+.photo{
+    width: 100%;
+    height: 350px;
+    border-radius: 3%;
+}
 .title {
+    color: #1718239e;
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
@@ -21,14 +26,15 @@ body {
   display: flex;
 }
 .sidebar {
-  background-color: #1e2939;
+  background-color: #313f52;
   height: 1319px;
   width: 370px;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding: 25px;
 }
 .about-me-container {
+background-color: #5489d84f;
   padding: 50px 90px;
+  width: 1000px;
 }
 .contact-container {
   margin-top: 60px;
@@ -103,9 +109,34 @@ body {
   color: #fff;
 }
 
+.languages-container {
+    padding-top: 54px;
+    padding-left: 40px;
+}
+.languages-title {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 24px;
+    padding-bottom: 15px;
+    color: #fff;
+}
+.languages-item {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #ff6b08;
+    margin-left: 17px;
+}
+.languages-text {
+    color: #fff;
+}
+
+
+
 .name {
   font-size: 45px;
   font-weight: 700;
+  color: #1718239e;
 }
 .about-me-text {
   font-size: 14px;
